magic/templates/52-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    gardener.cloud/description: |
      Allows CoreDNS to lookup DNS records for dns pods (i.e. kubelink)
      running on port 8053
  labels:
    shoot.gardener.cloud/no-cleanup: "true"
  name: mandelsoft.org--allow-kubelinkdns
  namespace: kube-system
spec:
  ingress:
  - from:
    - ipBlock:
        cidr: (( member.nodeCIDR ))  # node ip range for wireguard gateways nodes
    - ipBlock:
        cidr: (( values.meshCIDR)) # mesh ip range for wireguard gateways
  egress:
  - ports:
    - port: 8053
      protocol: TCP
    - port: 8053
      protocol: UDP
  podSelector:
    matchExpressions:
    - key: k8s-app
      operator: In
      values:
      - kube-dns
      - coredns
  policyTypes:
  - Egress
  - Ingress
